fix spacing

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6210,7 +6210,3 @@ button.close {
   text-shadow: 2px 2px 0 #513a33;
 }
 
-.container-wrapper{
-  margin-bottom: 60px;
-}
-
